<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- Parent de Spring Boot: alinea versiones del ecosistema Spring -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/>
    </parent>

    <!-- Coordenadas del monorepo -->
    <groupId>co.edu.unicauca</groupId>
    <artifactId>degree-project-platform-v3</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <!-- Java LTS + encoding -->
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- BOM Spring Cloud compatible con Boot 3.5.x -->
        <spring-cloud.version>2025.0.0</spring-cloud.version>

        <!-- Versiones centralizadas de librerías transversales -->
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok.version>1.18.34</lombok.version>
        <springdoc.version>2.8.13</springdoc.version>
        <jakarta.validation.version>3.1.0</jakarta.validation.version>
        <!-- Hash Argon2 (para hijos) -->
        <argon2.version>2.11</argon2.version>

        <!-- Build reproducible -->
        <project.build.outputTimestamp>${maven.build.timestamp}</project.build.outputTimestamp>
        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>

        <!-- Versión de Keycloak usada por el Admin Client -->
        <keycloak.version>26.0.7</keycloak.version>

        <java-jwt.version>4.4.0</java-jwt.version>

    </properties>

    <!--
      Gestión centralizada de versiones.
      Importante:
      - PostgreSQL: la versión del driver es gestionada por Spring Boot; cada módulo debe declarar la dependencia sin versión.
      - Flyway/Testcontainers: pueden declararse en los módulos que lo requieran, sin versión (gestionadas por Boot), o
        se puede introducir su BOM si en el futuro se quiere fijar versiones específicas.
    -->
    <dependencyManagement>
        <dependencies>
            <!-- BOM Spring Cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Librerías comunes sin versión en hijos -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- Para módulos sin Spring (shared, frontend) -->
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${jakarta.validation.version}</version>
            </dependency>

            <!-- Argon2 (usado en auth-service u otros) -->
            <dependency>
                <groupId>de.mkammerer</groupId>
                <artifactId>argon2-jvm</artifactId>
                <version>${argon2.version}</version>
            </dependency>

            <!-- Módulo interno: shared-contracts -->
            <dependency>
                <groupId>co.edu.unicauca</groupId>
                <artifactId>shared-contracts</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- JWT: decodificación/validación de tokens (usado en varios microservicios) -->
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${java-jwt.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Java 21 + annotation processors (MapStruct/Lombok) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        <!-- Defaults MapStruct -->
                        <compilerArgs>
                            <arg>-Amapstruct.defaultComponentModel=spring</arg>
                            <arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <!-- Boot repackage (los hijos solo lo declaran si generan jar ejecutable) -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>

                <!-- Enforcer: Java/Maven y errores comunes -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.5.0</version>
                    <executions>
                        <execution>
                            <id>enforce</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireJavaVersion>
                                        <version>[21,22)</version>
                                    </requireJavaVersion>
                                    <requireMavenVersion>
                                        <version>[3.9,)</version>
                                    </requireMavenVersion>
                                    <banDuplicatePomDependencyVersions/>
                                </rules>
                                <fail>true</fail>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <!-- Activa compiler heredando config -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <!-- Orden lógico de módulos -->
    <modules>
        <module>shared/shared-contracts</module>
        <module>frontend</module>

        <!-- Asegura que coincide con la carpeta real -->
        <module>backend/gateway</module>
        <!-- Si la carpeta es otra: <module>backend/gateway-service</module> -->

        <module>backend/auth-service</module>
        <module>backend/academic-project-service</module>
        <module>backend/coordinator-service</module>
        <module>backend/department-head-service</module>
        <module>backend/notification-service</module>
    </modules>
</project>
